fix: removed extra margins around page

--- a/docs/stylesheets/slider.css
+++ b/docs/stylesheets/slider.css
@@ -99,7 +99,3 @@ input.range_labels {
   top: -2px;
   left: 50%;
 }
-
-body {
-  margin: 2rem;
-}
